--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ body {
 
 .avatar {
     border-radius: 30px;
-    box-shadow: 10px 10px 20px grey;
+    box-shadow: 10px 10px 15px grey;
     width: 250x;
 }
 
